@@ -28,7 +28,6 @@ bin_PROGRAMS = \
 	directory2filelist \
 	fixmark5b \
 	m5bstate \
-	m5bsum \
 	m5d \
 	m5fold \
 	m5timeseries \
@@ -50,9 +49,6 @@ fixmark5b_SOURCES = \
 
 m5bstate_SOURCES = \
 	m5bstate.c
-
-m5bsum_SOURCES = \
-	m5bsum.c
 
 m5d_SOURCES = \
 	m5d.c
